[package]
name = "warnalyzer"
version = "0.1.0"
authors = ["est31 <MTest31@outlook.com>"]
edition = "2015"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "0.15", features = ["full", "extra-traits"] }
proc-macro2 = { version = "0.4", features = ["span-locations"] }
intervaltree = "0.2"
log = "0.4"
pretty_env_logger = "0.3"
