[package]
name = "warnalyzer"
version = "0.2.0"
authors = ["est31 <MTest31@outlook.com>"]
description = "Show unused code from multi-crate Rust projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/est31/warnalyzer"
readme = "README.md"
edition = "2015"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
intervaltree = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
rayon = "1.0"
chashmap = "2.2"
